# GenerativeFavelas

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
resources/shaders/: GridShader.frag  shader.frag  shader.vert
src/: Camera.cpp  Camera.h  FavelasColors.h  FavelasConfig.cpp  FavelasConfig.h  GenerativeFavelas.h  GridHelper.cpp  GridHelper.h  Group.cpp  Group.h  Main.cpp  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h  Wall.cpp  Wall.h
src/Geometry/: Door.cpp  Door.h  Railing.cpp  Railing.h  Square.cpp  Square.h  Wall.cpp  Wall.h  Window.cpp  Window.h
